<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.profile.verifymeetup.VerifyMeetup">

    <Button
            android:id="@+id/send_code"
            android:layout_width="208dp"
            android:layout_height="62dp"
            android:text="@string/verify_meetup_profile"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"/>

    <Button
            android:id="@+id/enter_code"
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:text="@string/enter_code"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="200dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="150dp"/>

    <Spinner
            android:id="@+id/eventSpinner"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textColor="#000000"
            android:layout_marginTop="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="42dp"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/eventid_verify_meetup"
            android:layout_marginTop="180dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="300dp"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"/>


    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/enter_code_text"
            android:layout_marginTop="380dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="270dp"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"/>

    <EditText android:inputType="number"
              android:layout_width="330dp"
              android:layout_height="42dp"
              android:id="@+id/verify_meetup_code"
              android:layout_marginTop="400dp"
              android:layout_alignParentTop="true"
              android:layout_marginEnd="42dp"
              android:layout_alignParentEnd="true"
              android:autofillHints=""
              tools:ignore="LabelFor"/>


    <TextView android:layout_width="200dp"
              android:layout_height="50dp"
              android:id="@+id/display_code"
              android:textSize="35sp"
              android:textAlignment="center"
              android:layout_marginTop="300dp"
              android:layout_alignParentTop="true"
              android:layout_marginEnd="107dp"
              android:layout_alignParentEnd="true"/>

    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/close_verify_meetup"
            android:src="@drawable/ic_close_dialog"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/exit_icon"/>

    <TextView
        android:id="@+id/verifyStatus"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="15dp"
        android:text="@string/verifyText"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>