<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/profile_view"
              android:title="@string/bottom_menu_one"
              android:icon="@drawable/ic_profile"/>
        <item android:id="@+id/map_view"
              android:title="@string/bottom_menu_two"
              android:icon="@drawable/ic_map_location"/>
        <item android:id="@+id/meetup_view"
              android:title="@string/bottom_menu_three"
              android:icon="@drawable/ic_baseline_people_24"/>
</menu>

