...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="guest_name">Guest Name</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="personName">personName</string>
    <string name="covid_report">Report Covid Symptoms</string>
    <string name="verify_meetup">Verify Meetup</string>
    <string name="begin_meetup_search">Find Meetup!</string>
    <string name="userIdNull">UserId: null</string>
    <string name="nameAnon">Name: Anon</string>
    <string name="permission_request">Permission Request</string>
    <string name="need_device_location_to_provide_required_services">Need device location to provide required services
    </string>
...
